--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.5",
+    "@fontsource/inter": "^4.5.4",
+    "firebase": "^9.6.7",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
