--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "firebase": "^9.6.7",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-confetti": "^6.0.1",
+    "react-countup": "^6.2.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
