--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-confetti": "^6.0.1",
     "react-countup": "^6.2.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "eslint": "8.9.0",
